# openbw

./: README.md  actions.h  bwdat.h  bwdata.h  bwenums.h  bwgame.h  circular_vector.h  containers.h  data_loading.h  data_types.h  game_types.h  idenums.h  intrusive_list.h  korean.h  replay.h  replay_player.h  replay_saver.h  s.h  static_vector.h  strf.h  sync.h  sync_server_asio_local.h  sync_server_asio_posix_stream.h  sync_server_asio_socket.h  sync_server_asio_tcp.h  util.h
cmake/: FindSDL2.cmake
mini-openbwapi/: BWAPI.h  CMakeLists.txt  openbwapi.cpp  openbwapi.h
ui/: CMakeLists.txt  common.h  dlmalloc.c  gfxtest.cpp  gfxtest.h  native_sound.h  native_window.h  native_window_drawing.h  sdl2.cpp  ui.h  unit_matcher.cpp  unit_matcher.h
